--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,5 +1,5 @@
 <div class="footer text-muted">
     &copy; {{ 'now'|date('Y') }}.
-    Made with <i class="icon-heart6"></i> by Captain Coaster.
+    Crafted with <i class="icon-heart6"></i> by French coaster enthusiasts.
     <a href="{{ path('default_terms') }}">{{ 'footer.terms'|trans }}</a>
 </div>
