--- a/src/BddBundle/Resources/views/Notification/email.html.twig
+++ b/src/BddBundle/Resources/views/Notification/email.html.twig
@@ -2,5 +2,5 @@
 <p>{{ 'notif.email.gotnotif'|trans({}, 'messages', locale) }}</p>
 <p style="font-weight: bold;">{{ notification.message|trans({}, 'messages', locale) }}</p>
 —
-<p>{{ 'notif.email.view'|trans({'%link_path%': absolute_url(path('notification_read', {'id': notification.id, '_locale': locale}))}, 'messages', locale)|raw }}</p>
-<p>{{ 'notif.email.unsubscribe'|trans({'%link_path%': absolute_url(path('me', {'_locale': locale}))}, 'messages', locale)|raw }}</p>
+<p>{{ 'notif.email.view'|trans({'%link_path%': url('notification_read', {'id': notification.id, '_locale': locale})}, 'messages', locale)|raw }}</p>
+<p>{{ 'notif.email.unsubscribe'|trans({'%link_path%': url('me', {'_locale': locale})}, 'messages', locale)|raw }}</p>
