--- a/src/BddBundle/Resources/views/User/list_ratings.html.twig
+++ b/src/BddBundle/Resources/views/User/list_ratings.html.twig
@@ -1,69 +1,71 @@
 {% extends "::base.html.twig" %}
 
+{% import "helper.html.twig" as helper %}
+
 {% set title = 'user_rating.title'|trans({'%name%': user.displayName}) %}
 {% block title %}{{ title }}{% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('js/plugins/rateit/rateit.css') }}">
+  <link rel="stylesheet" href="{{ asset('js/plugins/rateit/rateit.css') }}">
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
-    <script src="{{ asset('js/pages/rating.js') }}"></script>
+  <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
+  <script src="{{ asset('js/pages/rating.js') }}"></script>
 {% endblock %}
 
 {% block body %}
-    {#<div class="count">#}
-    {#{{ ratings.getTotalItemCount }}#}
-    {#</div>#}
-    <div class="panel panel-white">
-        <div class="table-responsive" style="display: block;">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>{{ knp_pagination_sortable(ratings, 'user_rating.coaster'|trans, 'c.name') }}</th>
-                    <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.manufacturer'|trans, ['m.name']) }}</th>
-                    <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.opening_date'|trans, ['c.openingDate']) }}</th>
-                    <th>{{ knp_pagination_sortable(ratings, 'user_rating.rating'|trans, ['r.value']) }}</th>
-                    <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.rated_at'|trans, 'r.updatedAt') }}</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for rating in ratings %}
-                    <tr id="tr-coaster-{{ rating.coaster.id }}">
-                        <td>
-                            <a href="{{ path('bdd_show_coaster', {'slug': rating.coaster.slug}) }}"
-                               class="text-semibold">{{ rating.coaster.name }}</a>
-                            <div class="text-muted text-size-small">
-                                <span class="status-mark bg-{{ rating.coaster.status.type }} position-left"></span>
-                                <a class="text-muted"
-                                   href="{{ path('park_show', {'slug': rating.coaster.park.slug}) }}">
-                                    {{ rating.coaster.park.name }}
-                                </a>
+  {#<div class="count">#}
+  {#{{ ratings.getTotalItemCount }}#}
+  {#</div>#}
+  <div class="panel panel-white">
+    <div class="table-responsive" style="display: block;">
+      <table class="table">
+        <thead>
+        <tr>
+          <th>{{ knp_pagination_sortable(ratings, 'user_rating.coaster'|trans, 'c.name') }}</th>
+          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.manufacturer'|trans, ['m.name']) }}</th>
+          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.opening_date'|trans, ['c.openingDate']) }}</th>
+          <th>{{ knp_pagination_sortable(ratings, 'user_rating.rating'|trans, ['r.value']) }}</th>
+          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.rated_at'|trans, 'r.updatedAt') }}</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for rating in ratings %}
+          <tr id="tr-coaster-{{ rating.coaster.id }}">
+            <td>
+              <a href="{{ path('bdd_show_coaster', {'slug': rating.coaster.slug}) }}"
+                 class="text-semibold">{{ rating.coaster.name }}</a>
+              <div class="text-muted text-size-small">
+                <span class="status-mark bg-{{ rating.coaster.status.type }} position-left"></span>
+                <a class="text-muted"
+                   href="{{ path('park_show', {'slug': rating.coaster.park.slug}) }}">
+                  {{ rating.coaster.park.name }}
+                </a>
 
-                            </div>
-                        </td>
-                        <td class="hidden-xs">
-                            {{ rating.coaster.builtCoaster.manufacturer.name }}
-                        </td>
-                        <td class="hidden-xs">
-                            {{ rating.coaster.openingDate|date("Y") }}
-                        </td>
-                        <td>
-                            <div class="rating-coaster"
-                                 data-coaster="{{ rating.coaster.id }}"
-                                 data-rateit-value="{{ rating.value }}"
-                                 data-rateit-readonly="true"
-                                 style="font-size: 22px;"></div>
-                        </td>
-                        <td class="hidden-xs">
-                            {{ rating.updatedAt|date("d/m/Y") }}
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+              </div>
+            </td>
+            <td class="hidden-xs">
+              {{ rating.coaster.builtCoaster.manufacturer.name }}
+            </td>
+            <td class="hidden-xs">
+              {{ rating.coaster.openingDate|date("Y") }}
+            </td>
+            <td>
+              <div class="rating-coaster"
+                   data-coaster="{{ rating.coaster.id }}"
+                   data-rateit-value="{{ rating.value }}"
+                   data-rateit-readonly="true"
+                   style="font-size: 22px;"></div>
+            </td>
+            <td class="hidden-xs">
+              {{ helper.displayDate(rating.updatedAt) }}
+            </td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
     </div>
-    {{ knp_pagination_render(ratings) }}
+  </div>
+  {{ knp_pagination_render(ratings) }}
 {% endblock %}
