--- a/app/Resources/views/helper.html.twig
+++ b/app/Resources/views/helper.html.twig
@@ -4,3 +4,11 @@
        class="{{ className|default('img-circle img-lg') }}"
        alt="{{ user.displayName }}">
 {% endmacro %}
+
+{% macro displayDate(date) %}
+  {% if date|date("dm") == "0101" %}
+    {{ date|date("Y") }}
+  {% else %}
+    {{ date|localizeddate('short', 'none') }}
+  {% endif %}
+{% endmacro %}
