--- a/src/BddBundle/Resources/views/Coaster/ranking.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/ranking.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
+{% import "helper.html.twig" as helper %}
+
 {% set rankingMonth = date()|localizeddate('none', 'none', null, null, 'MMMM Y')|capitalize %}
 {% set title = 'coaster_ranking.title'|trans({'%rankingMonth%': rankingMonth}) %}
 {% block title %}{{ title }}{% endblock %}
@@ -32,47 +34,31 @@
         </div>
 
         <div class="media-body">
-          <h2 class="media-heading">
-            {{ coaster.rank }}
-            -
-            <a style="color:#333;"
-               href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">{{ coaster.name }}
-            </a>
+          <h2 class="media-heading mb-10">
+            {{ coaster.rank }} - <a style="color:#333;"
+                                    href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">{{ coaster.name }}</a>
+            {{ helper.variation(coaster) }}
           </h2>
-          <ul class="list-inline list-inline-separate text-muted mb-10">
+          <ul class="list-inline list-inline-separate text-muted mb-5">
+            <li>
+              <a class="text-muted"
+                 href="{{ path('park_show', {'slug': coaster.park.slug}) }}">{{ coaster.park.name }}</a>
+            </li>
+            <li>{{ coaster.park.country.name|trans([], 'database') }}</li>
+          </ul>
+          <ul class="list-inline list-inline-separate text-muted mb-5">
             <li>{{ coaster.builtCoaster.manufacturer.name }}</li>
             <li>{{ coaster.builtCoaster.types|join(', ') }}</li>
-            <li>
-              <a class="text-muted" href="{{ path('park_show', {'slug': coaster.park.slug}) }}">
-                {{ coaster.park.name }}, {{ coaster.park.country.name|trans([], 'database') }}
-              </a>
-            </li>
           </ul>
-          {% if coaster.previousRank is empty %}
-            <span class="label label-warning">new</span>
-          {% elseif coaster.previousRank < coaster.rank %}
-            <span class="label label-danger">
-                            <i class="icon-arrow-down5"></i>
-                            - {{ (coaster.rank - coaster.previousRank)|abs }}
-                        </span>
-          {% elseif coaster.previousRank > coaster.rank %}
-            <span class="label label-success">
-                            <i class="icon-arrow-up5"></i>
-                            + {{ (coaster.rank - coaster.previousRank)|abs }}
-                        </span>
-          {% elseif coaster.previousRank == coaster.rank %}
-            <span class="label label-primary">
-                            <i class="icon-arrow-right5"></i> =
-                        </span>
-          {% endif %}
         </div>
         <div class="media-right text-center">
-          <h3 class="no-margin text-semibold text-nowrap">
+          <h3 style="color: {{ helper.ratingColor(coaster.score) }};" class="no-margin text-semibold text-nowrap">
             {{ coaster.score|number_format(1, ',') }}%
           </h3>
-          <div class="text-muted">
-            {{ 'coaster_ranking.reviews_number'|transchoice(coaster.totalRatings) }}
-          </div>
+          <ul class="list-unstyled text-muted mb-10 mt-10 text-nowrap">
+            <li>{{ 'coaster_ranking.rating_number'|transchoice(coaster.totalRatings) }}</li>
+            <li>{{ 'coaster_ranking.top_number'|transchoice(coaster.totalTopsin) }}</li>
+          </ul>
         </div>
       </li>
     {% endfor %}
