add stat top 100 in profile

--- a/src/BddBundle/Resources/views/Profile/user_stats.html.twig
+++ b/src/BddBundle/Resources/views/Profile/user_stats.html.twig
@@ -60,6 +60,20 @@
         </div>
       </div>
     </div>
+    <div class="col-sm-6 col-md-4">
+      <div class="panel panel-body panel-body-accent">
+        <div class="media no-margin">
+          <div class="media-left media-middle">
+            <i class="icon-trophy2 icon-3x text-teal-400"></i>
+          </div>
+
+          <div class="media-body text-right">
+            <h3 class="no-margin text-semibold">{{ stats.top_100 }}</h3>
+            <span class="text-uppercase text-size-mini text-muted">Ridden in Top 100</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endif %}
