--- a/src/BddBundle/Resources/views/User/list_ratings.html.twig
+++ b/src/BddBundle/Resources/views/User/list_ratings.html.twig
@@ -2,7 +2,7 @@
 
 {% import "helper.html.twig" as helper %}
 
-{% set title = 'user_rating.title'|trans({'%name%': user.displayName}) %}
+{% set title = 'users.ratings.title'|trans({'%name%': user.displayName}) %}
 {% block title %}{{ title }}{% endblock %}
 
 {% block stylesheets %}
@@ -23,11 +23,11 @@
       <table class="table">
         <thead>
         <tr>
-          <th>{{ knp_pagination_sortable(ratings, 'user_rating.coaster'|trans, 'c.name') }}</th>
-          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.manufacturer'|trans, ['m.name']) }}</th>
-          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.opening_date'|trans, ['c.openingDate']) }}</th>
-          <th>{{ knp_pagination_sortable(ratings, 'user_rating.rating'|trans, ['r.value']) }}</th>
-          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.rated_at'|trans, 'r.updatedAt') }}</th>
+          <th>{{ knp_pagination_sortable(ratings, 'users.ratings.coaster'|trans, 'c.name') }}</th>
+          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'users.ratings.manufacturer'|trans, ['m.name']) }}</th>
+          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'users.ratings.opening_date'|trans, ['c.openingDate']) }}</th>
+          <th>{{ knp_pagination_sortable(ratings, 'users.ratings.rating'|trans, ['r.value']) }}</th>
+          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'users.ratings.rated_at'|trans, 'r.updatedAt') }}</th>
         </tr>
         </thead>
         <tbody>
