--- a/src/BddBundle/Resources/views/User/lists.html.twig
+++ b/src/BddBundle/Resources/views/User/lists.html.twig
@@ -18,8 +18,9 @@
       {{ 'liste.list.info'|trans }}
     </div>
     <div class="media-right media-middle">
-      <a href="{{ path('liste_new') }}" class="btn bg-teal-400 btn-lg"><i class="icon-add position-left"></i> Créer une
-        liste</a>
+      <a href="{{ path('liste_new') }}" class="btn bg-teal-400 btn-lg"><i class="icon-add position-left"></i>
+        {{ 'liste.list.create'|trans }}
+      </a>
     </div>
   </div>
 
