delete lists / distinction top & list

--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -21,6 +21,11 @@
             </a>
           </li>
           <li>
+            <a href="{{ path('top_list') }}">
+              <i class="icon-podium"></i> <span>{{ 'sidebar.top'|trans }}</span>
+            </a>
+          </li>
+          <li>
             <a href="{{ path('liste_list') }}">
               <i class="icon-podium"></i> <span>{{ 'sidebar.liste'|trans }}</span>
             </a>
