--- a/src/BddBundle/Resources/views/User/list.html.twig
+++ b/src/BddBundle/Resources/views/User/list.html.twig
@@ -25,7 +25,7 @@
               </div>
               <div class="media-body">
                 <h6 class="media-heading">
-                  <a href="{{ path('user_profile', {'id': user.0.id}) }}">
+                  <a href="{{ path('user_show', {'slug': user.0.slug}) }}">
                     {{ user.0.displayName }}
                   </a>
                 </h6>
