--- a/src/BddBundle/Resources/views/Coaster/reviews.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/reviews.html.twig
@@ -25,7 +25,7 @@
 
             <div class="media-body">
               <div class="media-heading">
-                <a href="{{ path('user_profile', {'id': review.user.id}) }}">
+                <a href="{{ path('user_show', {'slug': review.user.slug}) }}">
                   {{ review.user.displayName }}
                 </a>
                 <span class="media-annotation dotted">
