--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -106,7 +106,7 @@
           <ul class="list-feed">
             {% for ratingItem in ratingFeed %}
               <li>
-                <a class="text-bold" href="{{ path('user_profile', {'id': ratingItem.user.id}) }}">
+                <a class="text-bold" href="{{ path('user_show', {'slug': ratingItem.user.slug}) }}">
                   {{ ratingItem.user.displayName }}
                 </a>
                 {{ 'rating.action'|trans({'%value%': ratingItem.value}) }}
@@ -152,7 +152,7 @@
                         {{ review.coaster.park.name }}
                       </a>
                     </h6>
-                    <a href="{{ path('user_profile', {'id': review.user.id}) }}">
+                    <a href="{{ path('user_show', {'slug': review.user.slug}) }}">
                       {{ review.user.displayName }}
                     </a>
                     <span class="media-annotation dotted">
