--- a/src/BddBundle/Resources/views/Review/list.html.twig
+++ b/src/BddBundle/Resources/views/Review/list.html.twig
@@ -28,7 +28,7 @@
                       {{ review.coaster.park.name }}
                     </a>
                   </h6>
-                  <a href="{{ path('user_profile', {'id': review.user.id}) }}">
+                  <a href="{{ path('user_show', {'slug': review.user.slug}) }}">
                     {{ review.user.displayName }}
                   </a>
                   <span class="media-annotation dotted">
